WORK START: slight change in alignment

--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "68adedca",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "e14942ac",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "48f148c3",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "4  При трансграничной перевозке опасные отходы до...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "ef2e162d",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "646ac2dc",
    "metadata": {},
    "outputs": [
@@ -319,89 +319,127 @@
        "      <th>kaz_token</th>\n",
        "      <th>rus_index</th>\n",
        "      <th>rus_token</th>\n",
-       "      <th>p_ru_given_kz</th>\n",
-       "      <th>p_kz_given_ru</th>\n",
        "      <th>joint_prob</th>\n",
-       "      <th>is_link</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>Мен</td>\n",
-       "      <td>0</td>\n",
-       "      <td>И</td>\n",
-       "      <td>3.587796e-05</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>3.587796e-05</td>\n",
-       "      <td>False</td>\n",
+       "      <td>Айнымас</td>\n",
+       "      <td>2</td>\n",
+       "      <td>верные</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Мен</td>\n",
        "      <td>1</td>\n",
-       "      <td>я</td>\n",
-       "      <td>9.999641e-01</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>9.999641e-01</td>\n",
-       "      <td>True</td>\n",
+       "      <td>принциптерге</td>\n",
+       "      <td>3</td>\n",
+       "      <td>принципы</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Мен</td>\n",
-       "      <td>2</td>\n",
-       "      <td>подумал</td>\n",
-       "      <td>3.228321e-28</td>\n",
-       "      <td>1.193797e-13</td>\n",
-       "      <td>3.228321e-28</td>\n",
-       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>және</td>\n",
+       "      <td>4</td>\n",
+       "      <td>и</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Мен</td>\n",
-       "      <td>3</td>\n",
-       "      <td>об</td>\n",
-       "      <td>6.146913e-39</td>\n",
-       "      <td>3.557704e-05</td>\n",
-       "      <td>6.146913e-39</td>\n",
-       "      <td>False</td>\n",
+       "      <td>4</td>\n",
+       "      <td>өзіңнің</td>\n",
+       "      <td>7</td>\n",
+       "      <td>своей</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Мен</td>\n",
-       "      <td>4</td>\n",
-       "      <td>этом,</td>\n",
-       "      <td>4.209424e-32</td>\n",
-       "      <td>2.085690e-07</td>\n",
-       "      <td>4.209424e-32</td>\n",
-       "      <td>False</td>\n",
+       "      <td>5</td>\n",
+       "      <td>жеке</td>\n",
+       "      <td>8</td>\n",
+       "      <td>личной</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>миссияңнан</td>\n",
+       "      <td>9</td>\n",
+       "      <td>миссии</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>ауытқымау</td>\n",
+       "      <td>5</td>\n",
+       "      <td>сосредоточенность</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>9</td>\n",
+       "      <td>таңдау</td>\n",
+       "      <td>16</td>\n",
+       "      <td>выбор</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>10</td>\n",
+       "      <td>жасауға</td>\n",
+       "      <td>14</td>\n",
+       "      <td>сделать</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>11</td>\n",
+       "      <td>көмектесетін</td>\n",
+       "      <td>13</td>\n",
+       "      <td>помогающей</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>12</td>\n",
+       "      <td>ақыл</td>\n",
+       "      <td>12</td>\n",
+       "      <td>мудростью,</td>\n",
+       "      <td>0.998848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>13</td>\n",
+       "      <td>қосады.</td>\n",
+       "      <td>10</td>\n",
+       "      <td>наделяют</td>\n",
+       "      <td>0.999949</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   kaz_index kaz_token  rus_index rus_token  p_ru_given_kz  p_kz_given_ru  \\\n",
-       "0          0       Мен          0         И   3.587796e-05   1.000000e+00   \n",
-       "1          0       Мен          1         я   9.999641e-01   1.000000e+00   \n",
-       "2          0       Мен          2   подумал   3.228321e-28   1.193797e-13   \n",
-       "3          0       Мен          3        об   6.146913e-39   3.557704e-05   \n",
-       "4          0       Мен          4     этом,   4.209424e-32   2.085690e-07   \n",
-       "\n",
-       "     joint_prob  is_link  \n",
-       "0  3.587796e-05    False  \n",
-       "1  9.999641e-01     True  \n",
-       "2  3.228321e-28    False  \n",
-       "3  6.146913e-39    False  \n",
-       "4  4.209424e-32    False  "
+       "    kaz_index     kaz_token  rus_index          rus_token  joint_prob\n",
+       "0           0       Айнымас          2             верные    1.000000\n",
+       "1           1  принциптерге          3           принципы    1.000000\n",
+       "2           3          және          4                  и    1.000000\n",
+       "3           4       өзіңнің          7              своей    1.000000\n",
+       "4           5          жеке          8             личной    1.000000\n",
+       "5           6    миссияңнан          9             миссии    1.000000\n",
+       "6           7     ауытқымау          5  сосредоточенность    1.000000\n",
+       "7           9        таңдау         16              выбор    1.000000\n",
+       "8          10       жасауға         14            сделать    1.000000\n",
+       "9          11  көмектесетін         13         помогающей    1.000000\n",
+       "10         12          ақыл         12         мудростью,    0.998848\n",
+       "11         13       қосады.         10           наделяют    0.999949"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +451,7 @@
     "    is_informative,\n",
     ")\n",
     "\n",
-    "sample = silver_df.sample(random_state=0).iloc[0]\n",
+    "sample = silver_df.sample(random_state=42).iloc[0]\n",
     "kz_words = tuple(sample['kaz_sent'].split())\n",
     "ru_words = tuple(sample['rus_sent'].split())\n",
     "\n",
@@ -425,13 +463,22 @@
     ")\n",
     "details_matrix = details.to_dataframe(kz_words, ru_words)\n",
     "\n",
-    "informative_matrix = details_matrix[details_matrix['rus_token'].apply(is_informative)].copy()\n",
-    "informative_matrix.head()"
+    "true_links = (\n",
+    "    details_matrix[details_matrix['is_link']]\n",
+    "    .copy()\n",
+    "    .assign(\n",
+    "        is_informative_pair=lambda df: df['kaz_token'].apply(is_informative)\n",
+    "        & df['rus_token'].apply(is_informative)\n",
+    "    )\n",
+    "    .sort_values(['kaz_index', 'rus_index'])\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
+    "true_links.drop(['is_link', 'is_informative_pair', 'p_ru_given_kz', 'p_kz_given_ru'], axis = 1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "ba551ded",
    "metadata": {},
    "outputs": [
@@ -440,14 +487,15 @@
      "output_type": "stream",
      "text": [
       "Informative link share: 1.000\n",
-      "Fraction above 0.30 threshold on sample: 0.964\n"
+      "Fraction above 0.80 threshold on sample: 0.929\n"
      ]
     }
    ],
    "source": [
     "share_correct = informative_link_share(details, kz_words, ru_words)\n",
-    "prob_threshold = 0.3\n",
+    "prob_threshold = 0.8\n",
     "sample_records = silver_df.sample(n=200, random_state=1)[['kaz_sent', 'rus_sent']].to_dict('records')\n",
+    "\n",
     "coverage = fraction_above_threshold(\n",
     "    sample_records,\n",
     "    custom_aligner,\n",
@@ -455,8 +503,11 @@
     "    thresh=cfg.pipeline.alignment.threshold,\n",
     "    prob_threshold=prob_threshold,\n",
     ")\n",
+    "\n",
     "print(f\"Informative link share: {share_correct:.3f}\")\n",
-    "print(f\"Fraction above {prob_threshold:.2f} threshold on sample: {coverage:.3f}\")"
+    "print(f\"Fraction above {prob_threshold:.2f} threshold on sample: {coverage:.3f}\")\n",
+    "\n",
+    "#TODO:  Сгенерировать таблицу после предсказаний"
    ]
   },
   {
@@ -471,7 +522,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "849e38c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hi!\\nI've been meaning to write for ages and f...</td>\n",
+       "      <td>B2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>﻿It was not so much how hard people found the ...</td>\n",
+       "      <td>B2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Keith recently came back from a trip to Chicag...</td>\n",
+       "      <td>B2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The Griffith Observatory is a planetarium, and...</td>\n",
+       "      <td>B2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-LRB- The Hollywood Reporter -RRB- It's offici...</td>\n",
+       "      <td>B2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1489</th>\n",
+       "      <td>Light propagating in the vicinity of astrophys...</td>\n",
+       "      <td>C2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1490</th>\n",
+       "      <td>Future of dentistry has become one of the most...</td>\n",
+       "      <td>C2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1491</th>\n",
+       "      <td>﻿The forests – and suburbs – of Europe are ech...</td>\n",
+       "      <td>C2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1492</th>\n",
+       "      <td>Hedge funds are turning bullish on oil once ag...</td>\n",
+       "      <td>C2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1493</th>\n",
+       "      <td>Without additional heating, radiative cooling ...</td>\n",
+       "      <td>C2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1494 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   text label\n",
+       "0     Hi!\\nI've been meaning to write for ages and f...    B2\n",
+       "1     ﻿It was not so much how hard people found the ...    B2\n",
+       "2     Keith recently came back from a trip to Chicag...    B2\n",
+       "3     The Griffith Observatory is a planetarium, and...    B2\n",
+       "4     -LRB- The Hollywood Reporter -RRB- It's offici...    B2\n",
+       "...                                                 ...   ...\n",
+       "1489  Light propagating in the vicinity of astrophys...    C2\n",
+       "1490  Future of dentistry has become one of the most...    C2\n",
+       "1491  ﻿The forests – and suburbs – of Europe are ech...    C2\n",
+       "1492  Hedge funds are turning bullish on oil once ag...    C2\n",
+       "1493  Without additional heating, radiative cooling ...    C2\n",
+       "\n",
+       "[1494 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('data/text/cefr_leveled_texts.csv')\n",
+    "\n",
+    "# TODO: Найти источники для обоснования feature extraction process\n",
+    "\n",
+    "\n",
+    "# score = (\n",
+    "#     0.13 * nf[\"nf_avg_sent_len\"]\n",
+    "#     + 0.82 * nf[\"nf_avg_word_len\"]\n",
+    "#     + 0.01 * nf[\"nf_ttr\"]\n",
+    "#     + 0.20 * nf[\"nf_long_ratio\"]\n",
+    "#     + 0.05 * nf[\"nf_char_len\"]\n",
+    "#     + 0.05 * nf[\"nf_align_diff\"]\n",
+    "# ).astype(float)\n",
+    "\n",
+    "# Source\n",
+    "# The texts are taken from free resources found online including: The British Council, ESLFast, and the cnn-dailymail dataset.\n",
+    "# Texts that were found without a label were labelled using Text Inspector.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8adc52a8",
    "metadata": {},
    "outputs": [
@@ -578,7 +763,7 @@
        "4    0.760007  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,8 +805,18 @@
     "    'true_cefr': sample['predicted_cefr'].values,\n",
     "    'pred_cefr': preds,\n",
     "    'confidence': confidence,\n",
-    "})"
+    "})\n",
+    "\n",
+    "#TODO: check with english words"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7dafb02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
