text cefr classification implemented

--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "68adedca",
    "metadata": {},
    "outputs": [
@@ -20,9 +20,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project root: /Users/galymzhantore/cefr-classification-kk\n",
-      "Python version: 3.10.18\n",
-      "PyTorch version: 2.5.1\n",
+      "Project root: /Users/zhantore/Documents/cefr-classification-kk\n",
+      "Python version: 3.10.19\n",
+      "PyTorch version: 2.7.1\n",
       "CUDA available: False\n"
      ]
     }
@@ -51,10 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e14942ac",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/kazakh_cefr_env/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -63,18 +71,14 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of BertModel were not initialized from the model checkpoint at aneuraz/awesome-align-with-co and are newly initialized: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Silver labels: data/labels/silver_word_labels.csv\n"
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'alignment'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 26\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     24\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUsing existing parallel corpus: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mPARALLEL_PATH\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 26\u001b[0m custom_aligner \u001b[38;5;241m=\u001b[39m EmbeddingAligner(\u001b[43mcfg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpipeline\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43malignment\u001b[49m)\n\u001b[1;32m     28\u001b[0m SILVER_PATH \u001b[38;5;241m=\u001b[39m Path(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/labels/silver_word_labels.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m SILVER_PATH\u001b[38;5;241m.\u001b[39mexists():\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'alignment'"
      ]
     }
    ],
@@ -118,6 +122,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17074f53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "ed99e61c",
    "metadata": {},
@@ -129,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "48f148c3",
    "metadata": {},
    "outputs": [
@@ -251,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ef2e162d",
    "metadata": {},
    "outputs": [
@@ -494,7 +506,12 @@
    "source": [
     "share_correct = informative_link_share(details, kz_words, ru_words)\n",
     "prob_threshold = 0.8\n",
-    "sample_records = silver_df.sample(n=200, random_state=1)[['kaz_sent', 'rus_sent']].to_dict('records')\n",
+    "population_size = len(silver_df)\n",
+    "sample_size = min(200, population_size)\n",
+    "if sample_size == 0:\n",
+    "    sample_records = []\n",
+    "else:\n",
+    "    sample_records = silver_df.sample(n=sample_size, random_state=1)[['kaz_sent', 'rus_sent']].to_dict('records')\n",
     "\n",
     "coverage = fraction_above_threshold(\n",
     "    sample_records,\n",
@@ -507,7 +524,7 @@
     "print(f\"Informative link share: {share_correct:.3f}\")\n",
     "print(f\"Fraction above {prob_threshold:.2f} threshold on sample: {coverage:.3f}\")\n",
     "\n",
-    "#TODO:  Сгенерировать таблицу после предсказаний"
+    "#TODO:  Сгенерировать таблицу после предсказаний\n"
    ]
   },
   {
@@ -780,34 +797,39 @@
     "METRICS_PATH = MODEL_DIR / 'metrics.json'\n",
     "DATA_PATH = Path('data/text/kazparc_kz_ru_cefr_estimated.csv')\n",
     "\n",
-    "if not MODEL_PATH.exists():\n",
-    "    tabular_cfg = TabularTrainingConfig(train_path=DATA_PATH, output_dir=MODEL_DIR)\n",
-    "    train_tabular_model(tabular_cfg)\n",
+    "if not DATA_PATH.exists():\n",
+    "    print(f\"Tabular training dataset not found at {DATA_PATH}. Skipping tabular classifier section.\")\n",
+    "    tabular_result = None\n",
+    "else:\n",
+    "    if not MODEL_PATH.exists():\n",
+    "        tabular_cfg = TabularTrainingConfig(train_path=DATA_PATH, output_dir=MODEL_DIR)\n",
+    "        train_tabular_model(tabular_cfg)\n",
     "\n",
-    "classifier = load(MODEL_PATH)\n",
-    "metrics = json.loads(METRICS_PATH.read_text()) if METRICS_PATH.exists() else None\n",
-    "kazparc_df = pd.read_csv(DATA_PATH)\n",
-    "feature_columns = [\n",
-    "    col for col in kazparc_df.columns if col not in {'predicted_cefr', 'predicted_cefr_int'}\n",
-    "]\n",
+    "    classifier = load(MODEL_PATH)\n",
+    "    metrics = json.loads(METRICS_PATH.read_text()) if METRICS_PATH.exists() else None\n",
+    "    kazparc_df = pd.read_csv(DATA_PATH)\n",
+    "    feature_columns = [\n",
+    "        col for col in kazparc_df.columns if col not in {'predicted_cefr', 'predicted_cefr_int'}\n",
+    "    ]\n",
     "\n",
-    "if metrics:\n",
-    "    print(f\"Validation accuracy: {metrics['accuracy']:.3f}\")\n",
+    "    if metrics:\n",
+    "        print(f\"Validation accuracy: {metrics['accuracy']:.3f}\")\n",
     "\n",
-    "sample = kazparc_df.sample(n=5, random_state=0)\n",
-    "proba = classifier.predict_proba(sample[feature_columns])\n",
-    "preds = classifier.predict(sample[feature_columns])\n",
-    "confidence = proba.max(axis=1)\n",
+    "    sample = kazparc_df.sample(n=5, random_state=0)\n",
+    "    proba = classifier.predict_proba(sample[feature_columns])\n",
+    "    preds = classifier.predict(sample[feature_columns])\n",
+    "    confidence = proba.max(axis=1)\n",
     "\n",
-    "pd.DataFrame({\n",
-    "    'kaz': sample['kaz'].values,\n",
-    "    'rus': sample['rus'].values,\n",
-    "    'true_cefr': sample['predicted_cefr'].values,\n",
-    "    'pred_cefr': preds,\n",
-    "    'confidence': confidence,\n",
-    "})\n",
+    "    tabular_result = pd.DataFrame({\n",
+    "        'kaz': sample['kaz'].values,\n",
+    "        'rus': sample['rus'].values,\n",
+    "        'true_cefr': sample['predicted_cefr'].values,\n",
+    "        'pred_cefr': preds,\n",
+    "        'confidence': confidence,\n",
+    "    })\n",
     "\n",
-    "#TODO: check with english words"
+    "if 'tabular_result' in locals() and tabular_result is not None:\n",
+    "    tabular_result\n"
    ]
   },
   {
@@ -817,11 +839,128 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d11a523a",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Train CEFR Text Classifier\n",
+    "\n",
+    "With the bilingual corpus prepared, we can train the CEFR text classifier that combines TF-IDF features with the linguistic statistics computed earlier. The helper below wraps the `cefr.training.text_classification` module so training can run directly from this notebook.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d959bdfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from cefr.training.text_classification import parse_args, train_text_classifier\n",
+    "\n",
+    "TEXT_CLASSIFIER_DIR = Path(\"models/en_ru_text_classifier\")\n",
+    "TEXT_CLASSIFIER_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "classifier_config = parse_args([\n",
+    "    \"--dataset-path\", str(OUTPUT_CSV),\n",
+    "    \"--output-dir\", str(TEXT_CLASSIFIER_DIR),\n",
+    "    \"--test-size\", \"0.2\",\n",
+    "    \"--random-state\", \"42\",\n",
+    "])\n",
+    "\n",
+    "training_result = train_text_classifier(classifier_config)\n",
+    "training_result\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28c24479",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Inspect Metrics\n",
+    "\n",
+    "The training routine stores metrics alongside the fitted pipeline. Loading the JSON report provides overall accuracy, per-level precision/recall, and the confusion matrix so we can inspect model performance without leaving the notebook.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6eff70cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import json\n",
+    "\n",
+    "metrics_path = Path(training_result[\"metrics_path\"])\n",
+    "with metrics_path.open(encoding=\"utf-8\") as handle:\n",
+    "    metrics = json.load(handle)\n",
+    "\n",
+    "display({\n",
+    "    \"accuracy\": metrics.get(\"accuracy\"),\n",
+    "    \"labels\": metrics.get(\"labels\"),\n",
+    "})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "848ec112",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Quick Inference Helper\n",
+    "\n",
+    "Load the persisted classifier and run predictions on fresh samples. Provide both English text and an optional Russian translation; the model will output the predicted CEFR level together with class probabilities.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18544fbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "from joblib import load\n",
+    "\n",
+    "model_path = Path(training_result[\"model_path\"])\n",
+    "text_classifier = load(model_path)\n",
+    "\n",
+    "sample_rows = pd.DataFrame([\n",
+    "    {\n",
+    "        \"text_en\": \"The industrial revolution transformed many European countries in the 19th century.\",\n",
+    "        \"text_ru\": \"Промышленная революция преобразила многие европейские страны в XIX веке.\",\n",
+    "    },\n",
+    "])\n",
+    "\n",
+    "predicted_levels = text_classifier.predict(sample_rows)\n",
+    "probabilities = text_classifier.predict_proba(sample_rows)\n",
+    "list(zip(predicted_levels, probabilities))\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "kazakh_cefr_env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
